Stopwatch: stack time divs based on screen size, remove extra padding

--- a/share/spice/stopwatch/stopwatch.css
+++ b/share/spice/stopwatch/stopwatch.css
@@ -1,7 +1,3 @@
-#spice_stopwatch #split-list {
-	margin-top: 20px;
-}
-
 #spice_stopwatch .btn {
 	height: 75px;
 	width: 75px;
@@ -40,7 +36,6 @@
 	font-size: 35px;
 	display: inline-block;
 	padding: 2%;
-	min-width: 280px;
 }
 
 #spice_stopwatch .spice_pane_right {
@@ -49,6 +44,8 @@
 
 #spice_stopwatch .pane_block {
 	height: 50px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 #spice_stopwatch .label {
@@ -59,6 +56,7 @@
 
 #spice_stopwatch .btn-wrapper {
 	margin-top: 50px;
+	margin-bottom: 10px;
 	width: 100%;
 }
 
@@ -94,4 +92,11 @@
 	color: #999;
 	font-weight: normal;
 	text-align: center;
+}
+
+/* stack the big time divs if the screen is too narrow */
+@media screen and (max-width: 850px) {
+	#spice_stopwatch .pane_block {height: 100px;}
+	#spice_stopwatch .spice_pane {width: 96%; height: 45%; float: none;}
+	#spice_stopwatch .spice_pane_right {margin-top: 5px;}
 }
